--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "webpack-cli": "^3.3.9"
   },
   "dependencies": {
-    "idb": "^4.0.5"
+    "idb": "^4.0.5",
+    "moment": "^2.24.0"
   }
 }
