--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "idb": "^4.0.5",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "uninstall": "0.0.0"
   }
 }
