--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "webpack-cli": "^3.3.9"
   },
   "dependencies": {
+    "debounce": "^1.2.0",
     "idb": "^4.0.5",
-    "moment": "^2.24.0",
     "uninstall": "0.0.0"
   }
 }
